Another attempt at fixing the NetBSD CI job.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -215,4 +215,4 @@ jobs:
             /usr/sbin/pkg_add cmake
           run: |
             cmake -B build ${{ matrix.config.cmake_args }}
-            cmake --build build --parallel $(sysctl -n hw.ncpu)
+            cmake --build build
